Commitando projeto Dashboard 2

--- a/src/app/shared/components/cabecalho/cabecalho.component.html
+++ b/src/app/shared/components/cabecalho/cabecalho.component.html
@@ -1,4 +1,4 @@
-<header class="sticky-top">
+<!-- <header class="sticky-top">
   <nav class="navbar navbar-light bg-white">
     <a class="navbar-brand">
     <i
@@ -32,4 +32,4 @@
     <a [routerLink]="['']">Login</a>
     </span>
   </ng-template>
-  </header>
+  </header> -->
