Commitando projeto Dashboard 3

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
+<!-- <app-menuprincipal></app-menuprincipal> -->
+<!-- <app-cabecalho></app-cabecalho> -->
 <!-- <app-menu *ngIf="(temToken | async)?.id != null"></app-menu> -->
 <router-outlet></router-outlet>
+<!-- <app-rodape></app-rodape> -->
