--- a/src/app/essencial/bem-vindo/bem-vindo/bem-vindo.component.html
+++ b/src/app/essencial/bem-vindo/bem-vindo/bem-vindo.component.html
@@ -20,7 +20,7 @@
       <div class="body mt-4 p-2">
 
           <p>Bem Vindo !</p>
-          <!-- <h4>Seja bem-vindo(a), {{ (user$ | async)?.username}}!</h4> -->
+          <h4>Seja bem-vindo(a), {{ (user$ | async)?.username}}!</h4>
 
       </div>
 
