--- a/src/app/essencial/dashboard/dashboard/dashboard.component.html
+++ b/src/app/essencial/dashboard/dashboard/dashboard.component.html
@@ -1,1 +1,4 @@
+<app-cabecalho></app-cabecalho>
+<app-menuprincipal></app-menuprincipal>
+<app-rodape></app-rodape>
 <img [src]="url" [alt]="descricao" clss="img-thumbmail">
