--- a/src/app/shared/components/menuprincipal/menuprincipal.component.css
+++ b/src/app/shared/components/menuprincipal/menuprincipal.component.css
@@ -5,7 +5,7 @@
 		  max-width: 320px;
 		  margin: 0;
 		  padding: 1em;
-		  background: white;
+		  background: rgb(247, 247, 247);
 		  top: 0;
 		  left: -90%;
 		  transition: left 0.3s ease-out;
